# mcp-auth

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
src/mcp_auth/: http.py
