[project]
name = "mcp-auth"
version = "0.1.0"
description = "Tank-bound MCP server for auth.romaine.life user management. Wraps the admin console as MCP tools so an admin session pod can list/promote/enroll users."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.18.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_auth"]

[project.scripts]
mcp-auth-http = "mcp_auth.http:main"
